Fix #111574: Avoid asserts in BMLog with Dyntopo

This PR adds a new method to BMLog to explicitly make the intent of
searching for an entry clear and adjusts the calling code in `pbvh_bmesh`
to utilize it.

Pull Request: https://projects.blender.org/blender/blender/pulls/118543