source/blender/bmesh/intern/bmesh_log.hh
@@ -181,6 +181,15 @@ void BM_log_all_added(BMesh *bm, BMLog *log);
 void BM_log_before_all_removed(BMesh *bm, BMLog *log);
 
 /**
+ * Search the log for the original veftex coordinates.
+ *
+ * Does not modify the log or the vertex.
+ *
+ * \return: the pointer or nullptr if the vertex isn't found.
+ */
+const float *BM_log_find_original_vert_co(BMLog *log, BMVert *v);
+
+/**
  * Get the logged coordinates of a vertex.
  *
  * Does not modify the log or the vertex.
